--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:id="@+id/imageView"
-        android:src="@drawable/Oddsicon"
+        android:src="@drawable/oddsicon"
         android:layout_above="@+id/textView"
         android:layout_centerHorizontal="true" />
 
